update apis